--- a/TaxiCentral/app/build.gradle
+++ b/TaxiCentral/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
-    //compile 'com.github.jd-alexander:library:1.1.0'
+    compile 'com.github.jd-alexander:library:1.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
