--- a/TaxiCentral/app/src/main/AndroidManifest.xml
+++ b/TaxiCentral/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
         <activity android:name=".MenuActivity" />
         <activity android:name=".ActualStateActivity" />
+        <activity android:name=".FutureStateActivity" />
         <activity android:name=".GoToActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
