Añadida funcion ViewTaxiStands (falta mostrar el numero de taxis)

--- a/TaxiCentral/app/src/main/AndroidManifest.xml
+++ b/TaxiCentral/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity
             android:name=".NavigationActivity"
             android:label="@string/title_activity_navigation"></activity>
+        <activity android:name=".NearestStandsActivity"></activity>
     </application>
 
 </manifest>
