--- a/TaxiCentral/app/build.gradle
+++ b/TaxiCentral/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.google.android.gms:play-services-maps:9.0.0'
     compile 'com.github.jd-alexander:library:1.1.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-messaging:9.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
