--- a/TaxiCentral/app/src/main/AndroidManifest.xml
+++ b/TaxiCentral/app/src/main/AndroidManifest.xml
@@ -54,6 +54,22 @@
         <activity android:name=".PlanFutureTravelOriginActivity"></activity>
         <activity android:name=".PlanFutureTravelDestinationActivity"></activity>
         <activity android:name=".FutureTravelOptionsActivity"></activity>
+        <activity android:name=".AlertActivity"></activity>
+
+        <service
+            android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
