Info actual del taxi añadida

--- a/TaxiCentral/app/src/main/AndroidManifest.xml
+++ b/TaxiCentral/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".NearestStandsActivity"></activity>
         <activity android:name=".HistoryActivity"></activity>
         <activity android:name=".FutureTravelsActivity"></activity>
+        <activity android:name=".CurrentTravelActivity"></activity>
         <activity android:name=".CancelTravelActivity"></activity>
         <activity android:name=".PlanFutureTravelOriginActivity"></activity>
         <activity android:name=".PlanFutureTravelDestinationActivity"></activity>
